--- a/packages/theme-chalk/src/common/transition.scss
+++ b/packages/theme-chalk/src/common/transition.scss
@@ -2,7 +2,7 @@
 
 .fade-in-linear-enter-active,
 .fade-in-linear-leave-active {
-  transition: var(--el-transition-fade-linear);
+  transition: var(--wp-transition-fade-linear);
 }
 
 .fade-in-linear-enter-from,
@@ -12,7 +12,7 @@
 
 .#{$namespace}-fade-in-linear-enter-active,
 .#{$namespace}-fade-in-linear-leave-active {
-  transition: var(--el-transition-fade-linear);
+  transition: var(--wp-transition-fade-linear);
 }
 .#{$namespace}-fade-in-linear-enter-from,
 .#{$namespace}-fade-in-linear-leave-to {
@@ -21,7 +21,7 @@
 
 .#{$namespace}-fade-in-enter-active,
 .#{$namespace}-fade-in-leave-active {
-  transition: all var(--el-transition-duration) cubic-bezier(0.55, 0, 0.1, 1);
+  transition: all var(--wp-transition-duration) cubic-bezier(0.55, 0, 0.1, 1);
 }
 .#{$namespace}-fade-in-enter-from,
 .#{$namespace}-fade-in-leave-active {
@@ -30,7 +30,7 @@
 
 .#{$namespace}-zoom-in-center-enter-active,
 .#{$namespace}-zoom-in-center-leave-active {
-  transition: all var(--el-transition-duration) cubic-bezier(0.55, 0, 0.1, 1);
+  transition: all var(--wp-transition-duration) cubic-bezier(0.55, 0, 0.1, 1);
 }
 .#{$namespace}-zoom-in-center-enter-from,
 .#{$namespace}-zoom-in-center-leave-active {
@@ -42,7 +42,7 @@
 .#{$namespace}-zoom-in-top-leave-active {
   opacity: 1;
   transform: scaleY(1);
-  transition: var(--el-transition-md-fade);
+  transition: var(--wp-transition-md-fade);
   transform-origin: center top;
 
   &[data-popper-placement^='top'] {
@@ -59,7 +59,7 @@
 .#{$namespace}-zoom-in-bottom-leave-active {
   opacity: 1;
   transform: scaleY(1);
-  transition: var(--el-transition-md-fade);
+  transition: var(--wp-transition-md-fade);
   transform-origin: center bottom;
 }
 .#{$namespace}-zoom-in-bottom-enter-from,
@@ -72,7 +72,7 @@
 .#{$namespace}-zoom-in-left-leave-active {
   opacity: 1;
   transform: scale(1, 1);
-  transition: var(--el-transition-md-fade);
+  transition: var(--wp-transition-md-fade);
   transform-origin: top left;
 }
 .#{$namespace}-zoom-in-left-enter-from,
@@ -82,14 +82,14 @@
 }
 
 .collapse-transition {
-  transition: var(--el-transition-duration) height ease-in-out,
-    var(--el-transition-duration) padding-top ease-in-out,
-    var(--el-transition-duration) padding-bottom ease-in-out;
+  transition: var(--wp-transition-duration) height ease-in-out,
+    var(--wp-transition-duration) padding-top ease-in-out,
+    var(--wp-transition-duration) padding-bottom ease-in-out;
 }
 .horizontal-collapse-transition {
-  transition: var(--el-transition-duration) width ease-in-out,
-    var(--el-transition-duration) padding-left ease-in-out,
-    var(--el-transition-duration) padding-right ease-in-out;
+  transition: var(--wp-transition-duration) width ease-in-out,
+    var(--wp-transition-duration) padding-left ease-in-out,
+    var(--wp-transition-duration) padding-right ease-in-out;
 }
 
 .#{$namespace}-list-enter-active,
@@ -103,6 +103,6 @@
 }
 
 .#{$namespace}-opacity-transition {
-  transition: opacity var(--el-transition-duration)
+  transition: opacity var(--wp-transition-duration)
     cubic-bezier(0.55, 0, 0.1, 1);
 }
