--- a/packages/theme-chalk/src/date-picker/picker-panel.scss
+++ b/packages/theme-chalk/src/date-picker/picker-panel.scss
@@ -2,16 +2,16 @@
 @use '../common/var' as *;
 
 @include b(picker-panel) {
-  color: var(--el-text-color-regular);
+  color: var(--wp-text-color-regular);
   background: $color-white;
-  border-radius: var(--el-border-radius-base);
+  border-radius: var(--wp-border-radius-base);
   line-height: 30px;
 
   .#{$namespace}-time-panel {
     margin: 5px 0;
-    border: solid 1px var(--el-datepicker-border-color);
+    border: solid 1px var(--wp-datepicker-border-color);
     background-color: $color-white;
-    box-shadow: var(--el-box-shadow-light);
+    box-shadow: var(--wp-box-shadow-light);
   }
 
   @include e((body, body-wrapper)) {
@@ -28,7 +28,7 @@
   }
 
   @include e(footer) {
-    border-top: 1px solid var(--el-datepicker-inner-border-color);
+    border-top: 1px solid var(--wp-datepicker-inner-border-color);
     padding: 4px;
     text-align: right;
     background-color: $color-white;
@@ -43,25 +43,25 @@
     background-color: transparent;
     line-height: 28px;
     font-size: 14px;
-    color: var(--el-datepicker-text-color);
+    color: var(--wp-datepicker-text-color);
     padding-left: 12px;
     text-align: left;
     outline: none;
     cursor: pointer;
 
     &:hover {
-      color: var(--el-datepicker-hover-text-color);
+      color: var(--wp-datepicker-hover-text-color);
     }
 
     &.active {
       background-color: #e6f1fe;
-      color: var(--el-datepicker-active-color);
+      color: var(--wp-datepicker-active-color);
     }
   }
 
   @include e(btn) {
     border: 1px solid #dcdcdc;
-    color: var(--el-text-color-primary);
+    color: var(--wp-text-color-primary);
     line-height: 24px;
     border-radius: 2px;
     padding: 0 20px;
@@ -78,7 +78,7 @@
 
   @include e(icon-btn) {
     font-size: 12px;
-    color: var(--el-datepicker-icon-color);
+    color: var(--wp-datepicker-icon-color);
     border: 0;
     background: transparent;
     cursor: pointer;
@@ -86,11 +86,11 @@
     margin-top: 8px;
 
     &:hover {
-      color: var(--el-datepicker-hover-text-color);
+      color: var(--wp-datepicker-hover-text-color);
     }
 
     @include when(disabled) {
-      color: var(--el-text-color-disabled-base);
+      color: var(--wp-text-color-disabled-base);
 
       &:hover {
         cursor: not-allowed;
@@ -113,7 +113,7 @@
   top: 0;
   bottom: 0;
   width: 110px;
-  border-right: 1px solid var(--el-datepicker-inner-border-color);
+  border-right: 1px solid var(--wp-datepicker-inner-border-color);
   box-sizing: border-box;
   padding-top: 6px;
   background-color: $color-white;
