--- a/packages/theme-chalk/src/date-picker/time-picker.scss
+++ b/packages/theme-chalk/src/date-picker/time-picker.scss
@@ -6,7 +6,7 @@
   position: relative;
   width: 180px;
   left: 0;
-  z-index: var(--el-index-top);
+  z-index: var(--wp-index-top);
   user-select: none;
   box-sizing: content-box;
 
@@ -28,8 +28,8 @@
       box-sizing: border-box;
       padding-top: 6px;
       text-align: left;
-      border-top: 1px solid var(--el-border-color-light);
-      border-bottom: 1px solid var(--el-border-color-light);
+      border-top: 1px solid var(--wp-border-color-light);
+      border-bottom: 1px solid var(--wp-border-color-light);
     }
 
     &::after {
@@ -57,7 +57,7 @@
 
   @include e(footer) {
     border-top: 1px solid
-      var(--el-timepicker-inner-border-color, var(--el-border-color-light));
+      var(--wp-timepicker-inner-border-color, var(--wp-border-color-light));
     padding: 4px;
     height: 36px;
     line-height: 25px;
@@ -74,11 +74,11 @@
     background-color: transparent;
     outline: none;
     font-size: 12px;
-    color: var(--el-text-color-primary);
+    color: var(--wp-text-color-primary);
 
     &.confirm {
       font-weight: 800;
-      color: var(--el-timepicker-active-color, var(--el-color-primary));
+      color: var(--wp-timepicker-active-color, var(--wp-color-primary));
     }
   }
 }
