--- a/packages/theme-chalk/src/date-picker/time-spinner.scss
+++ b/packages/theme-chalk/src/date-picker/time-spinner.scss
@@ -39,18 +39,18 @@
 
   @include e(arrow) {
     font-size: 12px;
-    color: var(--el-text-color-secondary);
+    color: var(--wp-text-color-secondary);
     position: absolute;
     left: 0;
     width: 100%;
-    z-index: var(--el-index-normal);
+    z-index: var(--wp-index-normal);
     text-align: center;
     height: 30px;
     line-height: 30px;
     cursor: pointer;
 
     &:hover {
-      color: var(--el-color-primary);
+      color: var(--wp-color-primary);
     }
 
     &.arrow-up {
@@ -92,7 +92,7 @@
     height: 32px;
     line-height: 32px;
     font-size: 12px;
-    color: var(--el-text-color-regular);
+    color: var(--wp-text-color-regular);
 
     &:hover:not(.disabled):not(.active) {
       background: $background-color-base;
@@ -100,12 +100,12 @@
     }
 
     &.active:not(.disabled) {
-      color: var(--el-text-color-primary);
+      color: var(--wp-text-color-primary);
       font-weight: bold;
     }
 
     &.disabled {
-      color: var(--el-text-color-placeholder);
+      color: var(--wp-text-color-placeholder);
       cursor: not-allowed;
     }
   }
