--- a/packages/theme-chalk/src/date-picker/year-table.scss
+++ b/packages/theme-chalk/src/date-picker/year-table.scss
@@ -7,7 +7,7 @@
   border-collapse: collapse;
 
   .#{$namespace}-icon {
-    color: var(--el-datepicker-icon-color);
+    color: var(--wp-datepicker-icon-color);
   }
 
   td {
@@ -17,18 +17,18 @@
 
     &.today {
       .cell {
-        color: var(--el-color-primary);
+        color: var(--wp-color-primary);
         font-weight: bold;
       }
     }
 
     &.disabled .cell {
-      background-color: var(--el-bg-color-base);
+      background-color: var(--wp-bg-color-base);
       cursor: not-allowed;
-      color: var(--el-text-color-placeholder);
+      color: var(--wp-text-color-placeholder);
 
       &:hover {
-        color: var(--el-text-color-placeholder);
+        color: var(--wp-text-color-placeholder);
       }
     }
 
@@ -37,16 +37,16 @@
       height: 32px;
       display: block;
       line-height: 32px;
-      color: var(--el-datepicker-text-color);
+      color: var(--wp-datepicker-text-color);
       margin: 0 auto;
 
       &:hover {
-        color: var(--el-datepicker-hover-text-color);
+        color: var(--wp-datepicker-hover-text-color);
       }
     }
 
     &.current:not(.disabled) .cell {
-      color: var(--el-datepicker-active-color);
+      color: var(--wp-datepicker-active-color);
     }
   }
 }
