[add] add collapse

--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -4,4 +4,5 @@
 @use "./icon.scss";
 @use "./space.scss";
 @use "./grid.scss";
-@use "./collapse-transition.scss"
+@use "./collapse-transition.scss";
+@use "./collapse-item.scss"
