[mod] add disabled prop

--- a/packages/theme-chalk/src/collapse-item.scss
+++ b/packages/theme-chalk/src/collapse-item.scss
@@ -7,4 +7,10 @@
     &__content {
         padding: 10px;
     }
+    &.wp-collapse-item--disabled {
+        .wp-collapse-item__title {
+            cursor: not-allowed;
+            opacity: .5;
+        }
+    }
 }
