--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -6,4 +6,5 @@
 @use "./grid.scss";
 @use "./collapse-transition.scss";
 @use "./collapse-item.scss";
-@use "./popover.scss"
+@use "./popover.scss";
+@use "./menu.scss"
