--- a/packages/theme-chalk/src/menu.scss
+++ b/packages/theme-chalk/src/menu.scss
@@ -1,31 +1,71 @@
 .wp-menu {
-    max-width: 100%;
-    transition: width .2s;
-    &-item-title {
-        padding: 10px;
-        border-bottom: 1px solid #eee;
-        cursor: pointer;
-        transition: color .2s;
-        &:hover {
-            background-color: #fcfcfc;
-        }
-        &.wp-menu-item__active {
-            color: #2080f0;
+    max-width: 300px;
+    transition: max-width .2s;
+    overflow: hidden;
+    &.wp-menu__row {
+        max-width: 100%;
+        overflow: auto;
+        > .wp-menu-item {
+            display: inline-block;
         }
     }
+    &.wp-menu__collapse {
+        max-width: 40px;
+    }
     .wp-collapse-item {
-        &.wp-menu-item__active .wp-collapse-item__title {
+        &.wp-menu-item__active > .wp-collapse-item__title {
             color: #2080f0;
         }
     }
     .wp-collapse-item__title {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         cursor: pointer;
-        &:hover {
+        border: 0;
+        &:not(.wp-menu-item__diabeld):hover {
             background-color: #fcfcfc;
         }
     }
     .wp-collapse-item__content {
         padding: 0;
         padding-left: 20px;
+    }
+}
+.wp-menu-item {
+    &__diabeld {
+        opacity: .6;
+        cursor: not-allowed;
+    }
+    &__icon {
+        width: 1.2em;
+        display: inline-flex;
+        height: 1.2em;
+        align-items: center;
+        justify-content: center;
+        margin-right: 10px;
+        vertical-align: middle;
+        line-height: 0;
+    }
+    &-title {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        padding: 10px;
+        cursor: pointer;
+        transition: color .2s;
+        &:not(.wp-menu-item__diabeld):hover {
+            background-color: #fcfcfc;
+        }
+        &.wp-menu-item__active {
+            color: #2080f0;
+        }
+    }
+}
+.wp-popover-content {
+    padding: 0;
+    overflow: hidden;
+    > .wp-menu-item {
+        width: 200px;
     }
 }
