[mod] add scroll-list

--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -7,4 +7,5 @@
 @use "./collapse-transition.scss";
 @use "./collapse-item.scss";
 @use "./popover.scss";
-@use "./menu.scss"
+@use "./menu.scss";
+@use "./scroll-list.scss";
