--- a/packages/theme-chalk/src/collapse-item.scss
+++ b/packages/theme-chalk/src/collapse-item.scss
@@ -1,16 +1,28 @@
 .wp-collapse-item {
     &__title {
-        padding: 10px;
-        border-bottom: 1px solid #eee;
-        cursor: default;
+      padding: 10px;
+      border-bottom: 1px solid #eee;
+      cursor: default;
+      display: flex;
+      align-items: center;
+      &-text {
+        flex: 1;
+      }
+      &-icon {
+        color: #999;
+        transition: transform 0.2s;
+        &.active {
+          transform: rotate(180deg);
+        }
+      }
     }
     &__content {
-        padding: 10px;
+      padding: 10px;
     }
     &.wp-collapse-item--disabled {
-        .wp-collapse-item__title {
-            cursor: not-allowed;
-            opacity: .5;
-        }
+      .wp-collapse-item__title {
+        cursor: not-allowed;
+        opacity: 0.5;
+      }
     }
-}
+  }
