--- a/packages/theme-chalk/src/menu.scss
+++ b/packages/theme-chalk/src/menu.scss
@@ -88,7 +88,7 @@
         cursor: not-allowed;
     }
 }
-.wp-menu-tootip {
+.wp-menu-tooltip {
     font-size: var(--wp-menu-font-size);
 }
 .wp-menu-popover {
