--- a/packages/theme-chalk/src/menu.scss
+++ b/packages/theme-chalk/src/menu.scss
@@ -21,6 +21,25 @@
         overflow: auto;
         > .wp-menu-item {
             display: inline-block;
+            > .wp-menu-item-title {
+                position: relative;
+                &::after {
+                    content: '';
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 2px;
+                    background-color: var(--wp-menu-active-color);
+                    transform: scaleX(0);
+                    transition: transform .2s;
+                }
+                &.wp-menu-item__active {
+                    &::after {
+                        transform: scale(1);
+                    }
+                }
+            }
         }
     }
     &.wp-menu__collapse {
