--- a/packages/theme-chalk/src/overlay.scss
+++ b/packages/theme-chalk/src/overlay.scss
@@ -7,7 +7,7 @@
 
 .wp-overlay-fade-enter-active,
 .wp-overlay-fade-leave-active {
-  transition: opacity 0.5s ease;
+  transition: opacity 0.3s;
 }
 
 .wp-overlay-fade-enter-from,
