--- a/packages/theme-chalk/src/modal.scss
+++ b/packages/theme-chalk/src/modal.scss
@@ -1,9 +1,39 @@
 .wp-modal {
     max-height: 100%;
     background-color: #fff;
-    padding: 10px 20px;
     border-radius: 4px;
     overflow: auto;
+    font-size: 15px;
+    .wp-modal__header {
+        display: flex;
+        padding: 15px 20px;
+        font-size: 16px;
+        color: #333;
+        border-bottom: 1px solid #eee;
+        align-items: center;
+        &-text {
+            flex: 1;
+            font-weight: bold;
+        }
+        .wp-modal__icon {
+            color: #999;
+            cursor: pointer;
+            font-size: 18px;
+        }
+    }
+    .wp-modal__content {
+        padding: 20px;
+    }
+    .wp-modal__footer {
+        padding: 15px 20px;
+        border-top: 1px solid #eee;
+    }
+    &.wp-modal__no-border {
+        .wp-modal__header,
+        .wp-modal__footer {
+            border: 0;
+        }
+    }
 }
 
 .wp-modal__overlay {
