--- a/packages/theme-chalk/src/modal.scss
+++ b/packages/theme-chalk/src/modal.scss
@@ -23,6 +23,7 @@
         &-left,
         &-right {
             min-height: 100%;
+            max-height: 100%;
         }
         &-top {
             border-bottom-left-radius: var(--wp-modal-border-radius);
@@ -35,6 +36,7 @@
         &-top,
         &-bottom {
             min-width: 100%;
+            max-width: 100%;
         }
     }
     .wp-modal__header {
