--- a/packages/theme-chalk/src/modal.scss
+++ b/packages/theme-chalk/src/modal.scss
@@ -105,7 +105,7 @@
 
 .wp-modal-fade-enter-from,
 .wp-modal-fade-leave-to {
-    transform: scale(0);
+    transform: scale(.8);
     opacity: 0;
 }
 
