[mod] add modal outline none

--- a/packages/theme-chalk/src/modal.scss
+++ b/packages/theme-chalk/src/modal.scss
@@ -10,6 +10,7 @@
     overflow: auto;
     font-size: 15px;
     transition: var(--wp-modal-duration);
+    outline: none;
     &__drawer {
         border-radius: 0;
         &-left {
