--- a/packages/theme-chalk/src/collapse-item.scss
+++ b/packages/theme-chalk/src/collapse-item.scss
@@ -7,9 +7,11 @@
       align-items: center;
       &-text {
         flex: 1;
+        overflow: hidden;
       }
       &-icon {
         color: #999;
+        margin-left: 5px;
         transition: transform 0.2s;
         &.active {
           transform: rotate(180deg);
