--- a/packages/theme-chalk/src/modal.scss
+++ b/packages/theme-chalk/src/modal.scss
@@ -73,7 +73,7 @@
 }
 
 .wp-modal__overlay {
-    overflow: auto;
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
