[mod] add style

--- a/docs/docs/.vitepress/styles/common.css
+++ b/docs/docs/.vitepress/styles/common.css
@@ -51,3 +51,9 @@ td em {
 .sidebar > .sidebar-links > .sidebar-link > .sidebar-links > .sidebar-link > .sidebar-link-item {
     font-size: .925rem;
 }
+
+.content {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 2rem 2.5rem;
+}
