--- a/packages/theme-chalk/src/radio.scss
+++ b/packages/theme-chalk/src/radio.scss
@@ -31,6 +31,12 @@
     }
     &--label {
         padding-left: .4em;
+        flex: 1;
+        overflow: hidden;
+        a,
+        span {
+            vertical-align: middle;
+        }
     }
     &__small {
         --wp-radio-size: 14px;
