--- a/packages/theme-chalk/src/modal.scss
+++ b/packages/theme-chalk/src/modal.scss
@@ -11,6 +11,8 @@
     font-size: 15px;
     transition: var(--wp-modal-duration);
     outline: none;
+    display: flex;
+    flex-direction: column;
     &__drawer {
         border-radius: 0;
         &-left {
@@ -59,6 +61,8 @@
     }
     .wp-modal__content {
         padding: 20px;
+        flex: 1;
+        overflow: auto;
     }
     .wp-modal__footer {
         padding: 15px 20px;
