--- a/packages/theme-chalk/src/tree.scss
+++ b/packages/theme-chalk/src/tree.scss
@@ -49,5 +49,8 @@
             cursor: not-allowed;
             opacity: .9;
         }
+        &__selecting {
+            background-color: #f5f5f5 !important;
+        }
     }
 }
