[mod] click and select

--- a/packages/theme-chalk/src/tree.scss
+++ b/packages/theme-chalk/src/tree.scss
@@ -38,6 +38,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            height: 100%;
             > .xicon {
                 transition: transform .2s;
             }
