--- a/packages/theme-chalk/src/tree.scss
+++ b/packages/theme-chalk/src/tree.scss
@@ -34,6 +34,9 @@
                 }
             }
         }
+        &__ondrag {
+            background-color: #eee;
+        }
         &__title {
             display: flex;
             align-items: center;
