--- a/packages/theme-chalk/src/tree.scss
+++ b/packages/theme-chalk/src/tree.scss
@@ -12,6 +12,7 @@
         display: flex;
         padding: 5px;
         height: 30px;
+        position: relative;
         &:hover {
             background-color: #fafafa;
         }
@@ -32,6 +33,19 @@
                         background-color: #ccc;
                     }
                 }
+            }
+        }
+        &__dropline {
+            position: absolute;
+            left: 0;
+            width: 100%;
+            height: 5px;
+            background-color: transparent;
+            &.top {
+                top: 0;
+            }
+            &.bottom {
+                bottom: 0;
             }
         }
         &__ondrag {
