--- a/packages/theme-chalk/src/tree.scss
+++ b/packages/theme-chalk/src/tree.scss
@@ -1,20 +1,32 @@
 :root {
     --wp-tree-indent: 18px;
+    --wp-tree-font-size: 14px;
+    --wp-tree-node-hegiht: 30px;
+    --wp-tree-hover-bg: #fafafa;
+    --wp-tree-link-bg: #ccc;
+    --wp-tree-link-size: 1px;
+    --wp-tree-padding-top-bottom: 5px;
+    --wp-tree-padding-left-right: 5px;
+    --wp-tree-dropline-size: 5px;
+    --wp-tree-drop-bg: #eee;
+    --wp-tree-arrow-color: #ccc;
+    --wp-tree-arrow-size: 12px;
+    --wp-tree-selecting-color: #f5f5f5;
 }
 
 .wp-tree {
     cursor: default;
-    font-size: 14px;
+    font-size: var(--wp-tree-font-size);
     &-nodes {
         overflow: auto;
     }
     &-node {
         display: flex;
-        padding: 5px;
-        height: 30px;
+        padding: var(--wp-tree-padding-top-bottom) var(--wp-tree-padding-left-right);
+        height: var(--wp-tree-node-hegiht);
         position: relative;
         &:hover {
-            background-color: #fafafa;
+            background: var(--wp-tree-hover-bg);
         }
         &__indent {
             &-cell {
@@ -26,11 +38,11 @@
                     &::after {
                         content: '';
                         position: absolute;
-                        left: calc(50% - .5px);
-                        top: -5px;
-                        height: calc(100% + 10px);
-                        width: 1px;
-                        background-color: #ccc;
+                        left: calc(50% - var(--wp-tree-link-size) / 2);
+                        top: calc(-0px - var(--wp-tree-padding-top-bottom));
+                        height: calc(100% + var(--wp-tree-padding-top-bottom) * 2);
+                        width: var(--wp-tree-link-size);
+                        background: var(--wp-tree-link-bg);
                     }
                 }
             }
@@ -39,7 +51,7 @@
             position: absolute;
             left: 0;
             width: 100%;
-            height: 5px;
+            height: var(--wp-tree-dropline-size);
             background-color: transparent;
             &.top {
                 top: 0;
@@ -49,7 +61,7 @@
             }
         }
         &__ondrag {
-            background-color: #eee;
+            background: var(--wp-tree-drop-bg);
         }
         &__title {
             display: flex;
@@ -59,7 +71,7 @@
             white-space: nowrap;
             .wp-checkbox,
             .wp-radio {
-                margin-right: 5px;
+                margin-right: var(--wp-tree-padding-left-right);
             }
         }
         &__content {
@@ -69,18 +81,18 @@
             align-items: center;
         }
         &__arrow {
-            font-size: 12px;
-            color: #ccc;
+            font-size: var(--wp-tree-arrow-size);
+            color: var(--wp-tree-arrow-color);
             width: var(--wp-tree-indent);
             display: flex;
             align-items: center;
             justify-content: center;
             height: 100%;
             &.left {
-                margin-right: 5px;
+                margin-right: var(--wp-tree-padding-left-right);
             }
             &.right {
-                margin-left: 5px;
+                margin-left: var(--wp-tree-padding-left-right);
                 width: auto;
             }
             .loading {
@@ -98,7 +110,7 @@
             opacity: .9;
         }
         &__selecting {
-            background-color: #f5f5f5 !important;
+            background-color: var(--wp-tree-selecting-color) !important;
         }
     }
 }
