--- a/packages/theme-chalk/src/tree.scss
+++ b/packages/theme-chalk/src/tree.scss
@@ -105,7 +105,7 @@
                 transform: rotate(90deg);
             }
         }
-        &__disabled {
+        &__selecting-disabled {
             cursor: not-allowed;
             opacity: .9;
         }
