--- a/packages/theme-chalk/src/upload.scss
+++ b/packages/theme-chalk/src/upload.scss
@@ -1,13 +1,13 @@
 :root {
-    --wp-upload-success: green;
-    --wp-upload-waiting: rgb(66, 141, 252);
-    --wp-upload-fail: red;
+    --wp-upload-success: var(--wp-color-success);
+    --wp-upload-waiting: var(--wp-color-primary);
+    --wp-upload-fail: var(--wp-color-danger);
     --wp-upload-loading: #d9d9d9;
     --wp-upload-drag-icon-color: #d9d9d9;
     --wp-upload-drag-icon-size: 64px;
     --wp-upload-font-size: 13px;
     --wp-upload-icon-size: 15px;
-    --wp-upload-active-color: rgb(66, 141, 252);
+    --wp-upload-active-color: var(--wp-color-primary);
     --wp-upload-item-padding: 5px;
     --wp-upload-item-hover-bg: #fcfcfc;
     --wp-upload-card-color: rgb(215, 217, 219);
@@ -18,6 +18,7 @@
 
 .wp-upload {
     font-size: var(--wp-upload-font-size);
+    line-height: 1.5em;
     &__file {
         display: none;
     }
@@ -32,6 +33,7 @@
             flex: 1;
             overflow: hidden;
             margin: 0 var(--wp-upload-item-padding);
+            text-align: left;
         }
         &-progress {
             margin-left: var(--wp-upload-item-padding);
@@ -79,6 +81,7 @@
         flex-direction: column;
         transition: border .2s;
         em {
+            font-style: normal;
             color: var(--wp-upload-active-color);
         }
     }
