--- a/packages/theme-chalk/src/pagination.scss
+++ b/packages/theme-chalk/src/pagination.scss
@@ -27,6 +27,7 @@
         border-radius: 3px;
         width: 60px;
         text-align: center;
+        box-sizing: border-box;
     }
     &:not(.wp-pagination__disabled) {
         .wp-pagination--jumper-input:focus {
